Correction de l'alignement dans les cellules d'entête

--- a/components/interventions-table/interventions-table.scss
+++ b/components/interventions-table/interventions-table.scss
@@ -74,7 +74,7 @@ $shadow-sticky   : 2px 0 4px rgba(0, 0, 0, 0.05);
 
     th {
         padding      : 0.75rem 1rem;
-        text-align   : left;
+        text-align   : center;
         font-weight  : 600;
         color        : $color-gray-700;
         white-space  : nowrap;
@@ -100,13 +100,14 @@ $shadow-sticky   : 2px 0 4px rgba(0, 0, 0, 0.05);
         text-align : center;
         font-weight: 700;
         color      : $color-gray-800;
+        font-size     : 0.9rem;
+        letter-spacing: 0.025em;
 
         &.group-agronomie, &.group-environnemental, &.group-economique {
             border-right: 1px solid #d1d5db;
             border-left : 1px solid #d1d5db;
             border-bottom: 1px solid #d1d5db;
             border-top: 1px solid #d1d5db;
-
         }
         
         &.sub-header {
@@ -122,8 +123,6 @@ $shadow-sticky   : 2px 0 4px rgba(0, 0, 0, 0.05);
             border-right: 1px solid #d1d5db !important;
         }
 
-        font-size     : 0.9rem;
-        letter-spacing: 0.025em;
 
         // Group colors
         &.group-agronomie {
